[package]
name = "coxbot"
version = "0.1.0"
authors = ["Sean McNamara <smcnam@gmail.com>"]
edition = "2018"
license = "3BSD"
publish = false

[dependencies]
serenity = "0.5.14"
lazy_static = "1.3.0"
regex = "1"
chrono = "0.4.6"
tiberius = "0.3.2"
futures = "0.1.26"
futures-state-stream = "0.1.0"
tokio = "0.1.19"
tokio-current-thread = "0.1.6"

[profile.release]
lto = true
codegen-units = 1